force-app/main/default/objects/AccountBrand/fields/congaAutoSend__c.field-meta.xml
<CustomField>
    <fullName>congaAutoSend__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;emailtemplateid=a0n1H00000EZfXM&quot; +
&quot;&amp;qmode=SendEmail&quot; +
&quot;&amp;EmailReplyToID=&quot;+OwnerId +
&quot;&amp;templateid=&quot; + congaTemplate__c +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;emailadditionalto=&quot; + Email +
&quot;&amp;EmailBCC=jason.orbison@viewsonic.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>congaAutoSend</label>
    <type>Text</type>
</CustomField>