force-app/main/default/objects/AccountBrand/fields/congaTemplate__c.field-meta.xml
<CustomField>
    <fullName>congaTemplate__c</fullName>
    <label>congaTemplate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>