force-app/main/default/objects/AccountBrand/fields/fileURLThumbnail__c.field-meta.xml
<CustomField>
    <fullName>fileURLThumbnail__c</fullName>
    <label>fileURLThumbnail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>