force-app/main/default/objects/AccountBrand/fields/sendCoBrand__c.field-meta.xml
<CustomField>
    <fullName>sendCoBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sendCoBrand</label>
    <type>Checkbox</type>
</CustomField>